# discovery32l476

./: .gdbinit  Cargo.toml
.cargo/: config
examples/: blink.rs  idd.rs
src/: lib.rs
