
[package]
authors = ["Mathieu Suen <tryphont@pm.me>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Exploring the stm 32l476discovery board"
keywords = [
    "embedded-hal",
    "embedded-board",
]
license = "0BSD"
name = "discovery32l476"
readme = "README.md"
repository = "https://github.com/mathk/discovery32l476"
version = "0.0.1"

[dependencies]
stm32l4xx-hal = { path = "../stm32l4xx-hal", features = ["stm32l47x"] }
mfxstm32l152 = { path = "../mfxstm32l152" }
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.6"
stm32l4 = "0.6.0"
cortex-m = "0.5.8"
nb = "0.1.1"
as-slice = "0.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[replace]
"i2c-hal-tools:0.0.2" = { path = "../i2c-hal-tools" }
"stm32l4:0.6.0" = { path = "../stm32-rs/stm32l4" }
